...
            "state" : "translated",
            "value" : "Disposição"
          }
        }
      }
    },
    "Arrangement & Mirroring" : {
      "localizations" : {
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Disposição e espelhamento"
          }
...
      "isCommentAutoGenerated" : true
    },
    "Can't capture this source" : {
      "comment" : "A title for a view that shows when a source can't be captured.",
      "isCommentAutoGenerated" : true
    },
    "Cancel" : {
      "localizations" : {
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
          }
...

    },
    "Create a new virtual display" : {
      "comment" : "A label for a button that creates a new virtual display.",
      "isCommentAutoGenerated" : true
    },
    "Create Display" : {
      "localizations" : {
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Criar monitor"
          }
...
      }
    },
    "Mirror %@" : {
      "comment" : "A picker option to mirror a display to another display. The argument is the name of the display to mirror.",
      "isCommentAutoGenerated" : true
    },
    "Mirroring" : {
      "extractionState" : "stale",
      "localizations" : {
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Espelhamento"
...
      }
    },
    "Name" : {
      "comment" : "A label with a text field for entering a display name.",
      "isCommentAutoGenerated" : true
    },
    "New Virtual Display" : {
      "localizations" : {
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Novo monitor virtual"
          }
...
            "state" : "translated",
            "value" : "Abrir janela de visualização"
          }
        }
      }
    },
    "Overview" : {
      "localizations" : {
        "pt-BR" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Visão geral"
          }
...
